--- a/geocatalog/src/main/resources/application.yml
+++ b/geocatalog/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  error:
+    include-message: ALWAYS
 spring:
   application:
     name: geocatalog
@@ -5,7 +8,8 @@ spring:
     url: jdbc:postgresql://localhost:5432/basepointsdb
     username: andrew
     password: 1234
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: apdate
+      ddl-auto: create-drop
     show-sql: true
