--- a/geocatalog/pom.xml
+++ b/geocatalog/pom.xml
@@ -65,18 +65,12 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
-		<dependency>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-javadoc-plugin</artifactId>
-			<version>3.6.3</version>
-		</dependency>
-
 <!--		<dependency>-->
-<!--			<groupId>org.jetbrains</groupId>-->
-<!--			<artifactId>annotations</artifactId>-->
-<!--			<version>RELEASE</version>-->
-<!--			<scope>compile</scope>-->
+<!--			<groupId>org.apache.maven.plugins</groupId>-->
+<!--			<artifactId>maven-javadoc-plugin</artifactId>-->
+<!--			<version>3.6.3</version>-->
 <!--		</dependency>-->
+
 	</dependencies>
 
 	<build>
